--- a/style.css
+++ b/style.css
@@ -37,3 +37,33 @@ img{
   padding: 20px;
   height: 20px;
 }
+
+
+/* Countries Page */
+
+#country-page{
+  display: flex;
+  flex-flow: column-reverse;
+}
+
+.country-img-container{
+  width: 100%;
+  height: 300px;
+}
+
+#country-image{
+width: 100%;
+height: 100%;
+object-fit: cover;
+}
+
+#dropdown-container{
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.info{
+  display: flex;
+  opacity: 0;
+}
