--- a/style.css
+++ b/style.css
@@ -3,14 +3,25 @@
   border: 0;
   padding: 0;
 }
-
-
+/* Homepage */
 #slideshow {
   position: relative;
+  height: 300px;
+  width: 100%;
+  display: flex;
+}
+
+#container{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 img{
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .fade-in {
@@ -23,12 +34,18 @@ img{
   transition: 1s;
 }
 
+.title {
+  position: absolute;
+  z-index: 1111;
+}
 
 .controls {
   position: absolute;
-  bottom: 0%
-  right: 0%;
+  width: 100%;
   z-index: 1111;
+  align-self: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .button {
@@ -36,6 +53,7 @@ img{
   border-radius: 50%;
   padding: 20px;
   height: 20px;
+  margin: 3%;
 }
 
 
