--- a/style.css
+++ b/style.css
@@ -147,6 +147,33 @@ font-style: italic;
 margin: 5% 0;
 }
 
+/* About Page*/
+#about {
+  display: flex;
+  flex-flow: column-reverse;
+}
+
+#column2{
+  margin: 5% 10%;
+}
+
+#column2 h2 {
+  margin: 5% 0;
+  font-family: 'gothic';
+}
+
+#animals {
+  margin: 5% 0;
+  height: 400px;
+}
+
+#animals img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
 
 /* Countries Page */
 
