--- a/style.css
+++ b/style.css
@@ -154,24 +154,39 @@ margin: 5% 0;
 /* About Page*/
 #about {
   display: flex;
-  flex-flow: column-reverse;
+  flex-flow: column;
+}
+
+#column1{
+  order: 3;
 }
 
 #column2{
   margin: 5% 10%;
+  order: 1;
 }
 
-#column2 h2 {
+#column3 {
+  order: 2;
+  margin: 0 10%;
+}
+
+#column2 h2, #column3 h2 {
   margin: 5% 0;
   font-family: 'gothic';
 }
 
-#animals {
-  margin: 5% 0;
-  height: 400px;
+#animals-desktop {
+  display: none;
 }
 
-#animals img {
+#animals-mobile {
+  margin: 5% 0;
+  height: 400px;
+  display: block;
+}
+
+#animals-mobile img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -300,6 +315,10 @@ object-fit: cover;
     font-size: .9rem;
   }
 
+  /*About*/
+
+
+
   /*Countries Page*/
 
   #country-page {
@@ -344,6 +363,71 @@ object-fit: cover;
 
   h1{
     font-size: 4.2rem;
+  }
+
+  /*About*/
+
+  #about{
+    height: 100vh;
+    display: flex;
+    flex-flow: row;
+  }
+
+  #column1{
+    order: 1;
+    width: 33%;
+    padding: 2% 2% 0 2%;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+    height: 95vh;
+  }
+
+  #column2{
+    margin: 0;
+    padding: 2% 2% 0 2%;
+    order: 2;
+    width: 33%;
+    height:95vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  #column3 {
+    padding: 2% 2% 0 2%;
+    margin: 0;
+    order: 3;
+    width: 33%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  #column2 h2, #column3 h2 {
+    margin: 0 0 5% 0;
+    font-family: 'gothic';
+    font-size: 2rem;
+  }
+
+  #column2 p, #column3 p {
+    font-size: 1rem;
+    margin: 0 0 5% 0 ;
+  }
+
+  #animals-mobile {
+    display: none;
+  }
+
+  #animals-desktop {
+    height: 500px;
+    display: block;
+  }
+
+  #animals-desktop img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   /*Countries*/
