--- a/style.css
+++ b/style.css
@@ -171,6 +171,11 @@ margin: 5% 0;
   margin: 0 10%;
 }
 
+span{
+  font-style: italic;
+  font-size: .9rem;
+}
+
 #column2 h2, #column3 h2 {
   margin: 5% 0;
   font-family: 'gothic';
@@ -314,9 +319,6 @@ object-fit: cover;
   .blurb p{
     font-size: .9rem;
   }
-
-  /*About*/
-
 
 
   /*Countries Page*/
